# prefetch2es

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  entry_points.cfg  hoge.py  pyproject.toml  requirements.txt  setup.cfg
.cursor/rules/: 03_project.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yaml
.github/workflows/: publish-binary-pypi.yaml  publish-release.yaml  test.yaml
src/: prefetch2es.py
src/prefetch2es/: __init__.py  prefetch2es.py
src/prefetch2es/models/: ElasticsearchUtils.py  MetaData.py  Prefetch2es.py
src/prefetch2es/presenters/: Prefetch2esPresenter.py  Prefetch2jsonPresenter.py
src/prefetch2es/views/: BaseView.py  Prefetch2esView.py  Prefetch2jsonView.py
tests/: conftest.py  test__init__.py
