[tool.poetry]
name = "prefetch2es"
version = "1.3.0"
description = "A library for fast import of Windows Prefetch into Elasticsearch."
authors = ["sumeshi <j15322sn@gmail.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/sumeshi/prefetch2es"
homepage = "https://github.com/sumeshi/prefetch2es"

keywords = ['elasticsearch', 'prefetch']

[tool.poetry.scripts]
prefetch2es = 'prefetch2es:main'

[tool.poetry.dependencies]
python = "^3.7"
elasticsearch = "^7.8.0"
tqdm = "^4.48.0"
setuptools_rust = "^0.10.6"
setuptools = "^49.2.0"
wheel = "^0.34.2"
pyprefetch-rs = "^0.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
