[project]
name = "prefetch2es"
version = "2.2.1"
description = "A library for fast parse & import of Windows Prefetch into Elasticsearch."
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [
    { name = "sumeshi", email = "sum3sh1@protonmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "elasticsearch>=9.0.2",
    "orjson>=3.10.18",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
    "libscca-python==20240215",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.16.1",
    "nuitka==1.7.10",
    "pytest>=8.4.1",
]

[project.scripts]
prefetch2es = 'prefetch2es.views.Prefetch2esView:entry_point'
prefetch2json = 'prefetch2es.views.Prefetch2jsonView:entry_point'
