[metadata]
name = prefetch2es
version = 1.1.0
url = https://github.com/sumeshi/prefetch2es
author = S.Nakano
author_email = j15322sn@gmail.com
license_file = LICENSE
description = Import Windows Prefetch File to ElasticSearch.
long_description = file: README.md

[options]
zip_safe = False
package_dir =
    = src
packages = find:
install_requires = 
    elasticsearch
    six
    tqdm
    urllib3
    setuptools_rust
    pyprefetch-rs
dependency_links =
    git+https://github.com/sumeshi/pyprefetch-rs.git#egg=pyprefetch-rs
entry_points = file: entry_points.cfg

[options.packages.find]
where=src